public/style/styles.css
/* ... */
::selection { background: #fe57a1; color: #fff; text-shadow: none; }

a { color: #00e; }
a:visited { color: #551a8b; }
a:hover { color: #06e; }
a:focus { outline: thin dotted; }
a:hover, a:active { outline: 0; }

abbr[title] { border-bottom: 1px dotted; }
b, strong { font-weight: bold; }
blockquote { margin: 1em 40px; }
dfn { font-style: italic; }
hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
ins { background: #ff9; color: #000; text-decoration: none; }
mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
q { quotes: none; }
q:before, q:after { content: ""; content: none; }
small { font-size: 85%; }
sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }
ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
dd { margin: 0 0 0 40px; }
nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
svg:not(:root) { overflow: hidden; }
figure { margin: 0; }

form { margin: 0; }
fieldset { border: 0; margin: 0; padding: 0; }
label { cursor: pointer; }
legend { border: 0; *margin-left: -7px; padding: 0; }
button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
button, input { line-height: normal; *overflow: visible; }
table button, table input { *overflow: auto; }
button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
textarea { overflow: auto; vertical-align: top; resize: vertical; }
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }

/* ==|== primary styles =====================================================
   Author: Unplagged
   ========================================================================== */

body { 
  background-color: #f5f5f5;
  font-family: Helvetica, Arial, Sans-serif;
  color: #323232;
  min-width: 240px;
}

h2 {
  color: #40c0e9;
  margin: 0;
  font-weight: 100;
  font-size: 17pt;
}

p {
  font-size: 11pt;
  line-height: 14pt;
}

/* ==|== reusable styles ======================================================= */

.avatar,
.avatar-small{
  width: 50px;
  height: 50px;
  border: 3px solid #F5F5F5;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: 0px 3px 5px #a1a1a1;	/* webkit browser*/ 
  -moz-box-shadow: 0px 3px 5px #a1a1a1;	/* firefox */ 
  box-shadow: 0px 3px 5px #a1a1a1;
}

.avatar-small {
  width: 40px;
  height: 40px;
}

.button{
  padding: 0 3px;
  display: inline-block;
  border: 1px outset #c5c5c5;
  background-color: #f5f5f5;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  text-decoration: none;
  line-height: 22px;  
  color: #8B8F91;
}

.button:hover {
  border-style: solid;
}

.button .arrow-down {
  display: inline-block;
  margin-left: 3px;
  margin-bottom: 2px;
  padding-right: 18px;
  height: 18px;
  background: url(../images/arrow-down.png) no-repeat right -4px transparent;
  border-left: 1px solid #d5d5d5;
  vertical-align: bottom;
}

.button:hover .arrow-down{
  background-position: right -27px;
}

.target {
  cursor: crosshair;
}

/* ==|== toolbar styles ======================================================= */
header[role=toolbar]{
  background: #333333;
  background: -moz-linear-gradient(top, #4c4f54 0%, #000000 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4c4f54), color-stop(100%,#000000));
  background: -webkit-linear-gradient(top, #4c4f54 0%,#000000 100%);
  background: -o-linear-gradient(top, #4c4f54 0%,#000000 100%);
  background: -ms-linear-gradient(top, #4c4f54 0%,#000000 100%);
  background: linear-gradient(top, #4c4f54 0%,#000000 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4f54', endColorstr='#000000',GradientType=0 );
  padding: 5px 0;
  margin-bottom: 115px;
  position: relative; /* for the js close button */
}

header[role=toolbar] .content {
  margin: auto;
  width: 90%;
  padding: 0;
  min-height: 35px;
  line-height: 35px;
}

header[role=toolbar] a {
  color: #8b8f91;
}

header[role=toolbar] a:hover{
  text-decoration: none;
}

.user-box {
  float: left;
  position: relative;
  padding-left: 60px; /* space for the absolute positioned avatar */
}

.user-box .avatar{
  position: absolute;
  top: 5px;
  left: 0;
}

.user-menu {
  float: left;
  position: relative;
}

.user-menu:hover .arrow-down{
  background-position: right -27px;
}

.user-menu ul { 
  display: none;
  position: absolute;
  background: whiteSmoke;
  border: 1px solid #c5c5c5;
  z-index: 1000;
  top: 28px; /* top: 100%; would be nicer, but doesn't work due to line-height */
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  list-style-type: none;
  margin: 0;
  padding: 0 30px 0 5px;
}

.user-menu li a{
  white-space: nowrap;
  text-decoration: none;
}

.user-menu li:hover a{
  text-decoration: underline;
}

.user-menu:hover ul {
  display: block;
}

.case-settings-box {
  float: right;
}

.case-settings-box form {
  float: left;
}

.case-settings-box select {
  height: 24px;
  border-radius: 3px;
  width: 150px;
}
/* ... */

